--- a/app/page.module.css
+++ b/app/page.module.css
@@ -593,7 +593,9 @@
   }
 
   .locationMap {
-    min-height: 320px;
+    min-height: 280px;
+    aspect-ratio: 4 / 3;
+    height: auto;
   }
 
   .directionsBtn {
